@@ -1,152 +1,0 @@
-;NSIS Modern Csound5 Install Script
-
-!define PRODUCT "Csound"
-!define VERSION "@VERSION@"
-!define PROGRAM "csound"
-
-!include "MUI.nsh"
-
-;--------------------------------
-;General
-
-  ;Name and file
-  Name "${PRODUCT}"
-  OutFile "${PROGRAM}-${VERSION}.exe"
-
-  ;Default installation folder
-  InstallDir "$PROGRAMFILES\${PRODUCT}"
-  
-  ;Get installation folder from registry if available
-  InstallDirRegKey HKCU "Software\${PRODUCT}" ""
-
-;--------------------------------
-;Variables
-
-  Var MUI_TEMP
-  Var STARTMENU_FOLDER
-
-;--------------------------------
-;Interface Settings
-
-  !define MUI_ABORTWARNING
-
-;--------------------------------
-;Pages
-
-  !insertmacro MUI_PAGE_WELCOME
-  !insertmacro MUI_PAGE_LICENSE "license.txt"
-  !insertmacro MUI_PAGE_DIRECTORY
-  
-  ;Start Menu Folder Page Configuration
-  !define MUI_STARTMENUPAGE_REGISTRY_ROOT "HKCU" 
-  !define MUI_STARTMENUPAGE_REGISTRY_KEY "Software\${PRODUCT}" 
-  !define MUI_STARTMENUPAGE_REGISTRY_VALUENAME "Start Menu Folder"
-  
-  !insertmacro MUI_PAGE_STARTMENU Application $STARTMENU_FOLDER
-  
-  !insertmacro MUI_PAGE_INSTFILES
-
-  !define MUI_FINISHPAGE_SHOWREADME "${PROGRAM}.htm"
-  !define MUI_FINISHPAGE_SHOWREADME_NOTCHECKED
-  !insertmacro MUI_PAGE_FINISH
-
-  !insertmacro MUI_UNPAGE_CONFIRM
-  !insertmacro MUI_UNPAGE_INSTFILES
-
-;--------------------------------
-;Languages
- 
-  !insertmacro MUI_LANGUAGE "English"
-
-;--------------------------------
-;Installer Sections
-
-Section "${PRODUCT}" SecCopyUI
-
-  SetOutPath "$INSTDIR"
-  
-  File "${PROGRAM}.exe"
-  File "csound.xmg"
-  File "${PROGRAM}.htm"
-  File "license.txt"
-
-  ;Store installation folder
-  WriteRegStr HKCU "Software\${PRODUCT}" "" $INSTDIR
-  
-  ; back up old value of .csd
-  ReadRegStr $1 HKCR ".csd" ""
-  StrCmp $1 "" noBackup
-    StrCmp $1 "${PRODUCT}File" noBackup
-    WriteRegStr HKCR ".csd" "backup_val" $1
-  noBackup:
-  WriteRegStr HKCR ".csd" "" "${PRODUCT}File"
-  ReadRegStr $0 HKCR "${PRODUCT}File" ""
-  StrCmp $0 "" 0 skipAssoc
-	WriteRegStr HKCR "${PRODUCT}File" "" "CSound Unified File"
-	WriteRegStr HKCR "${PRODUCT}File\shell" "" "open"
-	WriteRegStr HKCR "${PRODUCT}File\DefaultIcon" "" $INSTDIR\${PROGRAM}.exe,0
-  skipAssoc:
-  WriteRegStr HKCR "${PRODUCT}File\shell\open\command" "" '$INSTDIR\${PROGRAM}.exe "%1"'
-
-  ;Create uninstaller
-  WriteUninstaller "$INSTDIR\Uninstall.exe"
-  
-  !insertmacro MUI_STARTMENU_WRITE_BEGIN Application
-    
-    ;Create shortcuts
-    CreateDirectory "$SMPROGRAMS\$STARTMENU_FOLDER"
-    CreateShortCut "$SMPROGRAMS\$STARTMENU_FOLDER\${PRODUCT}.lnk" "$INSTDIR\${PROGRAM}.exe"
-    CreateShortCut "$SMPROGRAMS\$STARTMENU_FOLDER\Uninstall.lnk" "$INSTDIR\uninstall.exe"
-    CreateShortCut "$SMPROGRAMS\$STARTMENU_FOLDER\Overview.lnk" "$INSTDIR\${PROGRAM}.htm"
-    CreateShortCut "$SMPROGRAMS\$STARTMENU_FOLDER\License.lnk" "$INSTDIR\license.txt"
-  
-  !insertmacro MUI_STARTMENU_WRITE_END
-
-SectionEnd
-
-;--------------------------------
-;Descriptions
-
-  ;Language strings
-  LangString DESC_SecCopyUI ${LANG_ENGLISH} "Copy ${PRODUCT} to the application folder."
-
-  ;Assign language strings to sections
-  !insertmacro MUI_FUNCTION_DESCRIPTION_BEGIN
-    !insertmacro MUI_DESCRIPTION_TEXT ${SecCopyUI} $(DESC_SecCopyUI)
-  !insertmacro MUI_FUNCTION_DESCRIPTION_END
-
-;--------------------------------
-;Uninstaller Section
-
-Section "Uninstall"
-
-  Delete "$INSTDIR\${PROGRAM}.exe"
-  Delete "$INSTDIR\csound.xmg"
-  Delete "$INSTDIR\${PROGRAM}.htm"
-  Delete "$INSTDIR\license.txt"
-  Delete "$INSTDIR\uninstall.exe"
-
-  RMDir "$INSTDIR"
-  
-  !insertmacro MUI_STARTMENU_GETFOLDER Application $MUI_TEMP
-    
-  Delete "$SMPROGRAMS\$MUI_TEMP\${PRODUCT}.lnk"
-  Delete "$SMPROGRAMS\$MUI_TEMP\Overview.lnk"
-  Delete "$SMPROGRAMS\$MUI_TEMP\License.lnk"
-  Delete "$SMPROGRAMS\$MUI_TEMP\Uninstall.lnk"
-  
-  ;Delete empty start menu parent diretories
-  StrCpy $MUI_TEMP "$SMPROGRAMS\$MUI_TEMP"
- 
-  startMenuDeleteLoop:
-    RMDir $MUI_TEMP
-    GetFullPathName $MUI_TEMP "$MUI_TEMP\.."
-    
-    IfErrors startMenuDeleteLoopDone
-  
-    StrCmp $MUI_TEMP $SMPROGRAMS startMenuDeleteLoopDone startMenuDeleteLoop
-  startMenuDeleteLoopDone:
-
-  DeleteRegKey /ifempty HKCU "Software\${PRODUCT}"
-
-SectionEnd
